[gd_scene load_steps=8 format=3 uid="uid://bsmkv64jvmdxe"]

[ext_resource type="Script" uid="uid://cssi65qgplqno" path="res://Scripts/Screens/Title.gd" id="1_ibg4t"]
[ext_resource type="Texture2D" uid="uid://xogbx7fu3f4d" path="res://Textures/Screens/Title/Title_BG.PNG" id="2_u35gi"]
[ext_resource type="Texture2D" uid="uid://vnjc6jvkea5a" path="res://Textures/Screens/Title/Title_Goblin.PNG" id="3_6b3c1"]
[ext_resource type="Texture2D" uid="uid://chhx0vyhiq2wt" path="res://Textures/Screens/Title/Title_Start.PNG" id="4_i5u3i"]
[ext_resource type="Texture2D" uid="uid://duaclkox8txrw" path="res://Textures/Screens/Title/Title_Quit.PNG" id="5_5q25v"]
[ext_resource type="Texture2D" uid="uid://gidcobj0t1nq" path="res://Textures/Screens/Title/Title_Settings.PNG" id="6_qtolg"]
[ext_resource type="Texture2D" uid="uid://cbsguqxc42k6p" path="res://Textures/Screens/Title/Title_Logo.PNG" id="7_t1y7p"]

[node name="Title" type="Node2D"]
script = ExtResource("1_ibg4t")
metadata/Group = "Title"

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(574.222, 324.625)
scale = Vector2(0.452257, 0.452257)
texture = ExtResource("2_u35gi")

[node name="TitleGoblin" type="Sprite2D" parent="."]
position = Vector2(574, 321)
scale = Vector2(0.464583, 0.464583)
texture = ExtResource("3_6b3c1")

[node name="StartButton" type="TextureButton" parent="."]
offset_left = 459.0
offset_top = 263.0
offset_right = 670.0
offset_bottom = 367.0
texture_normal = ExtResource("4_i5u3i")
ignore_texture_size = true
stretch_mode = 0
metadata/Group = "Title"

[node name="QuitButton" type="TextureButton" parent="."]
offset_left = 771.0
offset_top = 315.0
offset_right = 966.0
offset_bottom = 411.0
texture_normal = ExtResource("5_5q25v")
ignore_texture_size = true
stretch_mode = 0
metadata/Group = "Title"

[node name="SettingsButton" type="TextureButton" parent="."]
offset_left = 128.0
offset_top = 294.0
offset_right = 412.0
offset_bottom = 434.0
texture_normal = ExtResource("6_qtolg")
ignore_texture_size = true
stretch_mode = 0
metadata/Group = "Title"

[node name="Title" type="Sprite2D" parent="."]
position = Vector2(582, 163)
scale = Vector2(0.454212, 0.454212)
texture = ExtResource("7_t1y7p")

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
